Tsp 421 prepare bruno collection for manual testing (#93)
* TSP-421: add a Bruno collection; fixed endpoint according to REST API best practice